Исправлены ошибки и добавлены шрифты

--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,6 +1,6 @@
 .feynman {
   padding-top: 100px;
-  height: 890px;
+  min-height: 890px;
   display: flex;
   flex-direction: column;
   position: relative;
