--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,9 @@
 .footer {
   padding-top: 60px;
   padding-bottom: 40px;
-  background-color: #1f1f1f;
   display: flex;
   justify-content: center;
   min-height: 350px;
+  box-sizing: border-box;
+  background-color: #1f1f1f;
 }
