--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,10 @@
 
 /* --------- --------- --------- --------- --------- --------- --------- --------- --------- */
 
+@import url(../fonts/fonts.css);
+
+/* --------- --------- --------- --------- --------- --------- --------- --------- --------- */
+
 @import url(../blocks/page/page.css);
 
 /* --------- --------- --------- --------- --------- --------- --------- --------- --------- */
